--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission
+        android:protectionLevel="signature"
+        android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+
 
     <application
         android:allowBackup="true"
@@ -16,6 +20,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
+
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
